# GraphAutoTune

./: .clang-format  .gitignore  CMakeLists.txt  README.md  env.sh  run_pattern_matching.sh
data/: data_graph_20.txt  data_graph_30.txt  data_graph_50.txt  data_graph_500.txt  test_graph.txt
include/configs/: backend_config.hpp  config.hpp  engine_config.hpp  gpu_consts.cuh  graph_config.hpp  infra_config.hpp  launch_config.hpp  project_consts.hpp  vertex_set_config.hpp
include/consts/: general_consts.hpp  project_consts.hpp
include/core/: graph.cuh  graph.hpp  pattern.hpp  schedule.hpp  types.hpp  unordered_vertex_set.cuh  vertex_set.cuh  vertex_set.hpp
include/engine/: context.cuh  engine.cuh  engine.hpp  engine_kernel.cuh  storage.cuh  storage.hpp  worker.cuh  worker.hpp
include/gpu/: gpu_vertex_set.cuh
include/implementations/: array_vertex_set.cuh  bitmap_vertex_set.cuh
include/implementations/gpu/: array_vertex_set.cuh  bitmap_vertex_set.cuh  unordered_vertex_set.cuh  vertex_set.cuh
include/infra/: graph_backend.cuh  node.hpp
include/kernel/: expand.cuh
include/utils/: cuda_utils.cuh  utils.hpp
scripts/: build_random_graph.sh  run_graphset_pm.sh  run_pattern_matching.sh  run_test.sh  run_tuning.sh
src/: CMakeLists.txt
src/gpu/: CMakeLists.txt  gpu_vertex_set.cu
tests/: CMakeLists.txt  engine_test.cu  gpu_vertex_set_test.cu  test_engine.cu  test_graph.cu  test_schedule.cu  test_vertex_set.cu
tuning/: L2_CacheSpeed.cu  main.py  requirements.txt  test_config.py  test_driver.py  thread_speed.cu
tuning/tuning/: argparser.py  const.py  driver.py  manipulator.py  params.py  tuner.py  utils.py
tuning/tuning/common/: argparser.py  const.py
tuning/tuning/config/: base.py  details.py
tuning/tuning/role/: driver.py  manipulator.py  modeling.py  tuner.py
utils/: CMakeLists.txt  graph_transform.cu  random_graph.cpp
